<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple">

    <include
        android:id="@+id/job_desc_toolbar"
        layout="@layout/toolbar_job_desc" />

    <TextView
        android:id="@+id/newJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/job_desc_toolbar"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/new_job"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/title_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newJob"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/job"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_title_job"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_below="@id/title_job"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/text_input_fields_white"
        android:inputType="text" />

    <TextView
        android:id="@+id/title_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_title_job"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/desc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_title_desc"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_below="@id/title_desc"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_input_fields_white"
        android:inputType="text" />

    <TextView
        android:id="@+id/title_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_title_desc"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/task"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_title_task"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_below="@id/title_task"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_input_fields_white"
        android:inputType="text" />

    <TextView
        android:id="@+id/title_assign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_title_task"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/assign"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_title_assign"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_below="@id/title_assign"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_input_fields_white"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_title_assign"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/red_button"
        android:text="@string/Cancel"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_title_assign"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/blue_button"
        android:text="@string/Add"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>

</LinearLayout>