<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_task"
    android:layout_width="330dp"
    android:layout_height="110dp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/tv_username"
    android:layout_marginTop="30dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="20dp"
    android:layout_marginStart="40dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:src="@drawable/profile_img"
            />

        <RelativeLayout
            android:id="@+id/rl_info"
            android:layout_width="210dp"
            android:layout_height="110dp"
            android:layout_gravity="right"
            android:layout_toRightOf="@+id/img_user"
            android:background="@color/cyan">

            <TextView
                android:id="@+id/info_name"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:text="@string/filler_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_role"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_name"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:text="@string/filler_role"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_dep"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_role"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:text="@string/filler_dep"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />



        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>